--- a/estiloMaterias.css
+++ b/estiloMaterias.css
@@ -351,32 +351,27 @@ div.tabelaExplica > table > tbody > tr > td.destaque {
   font-weight: bold;
 }
 
-@media screen and (max-width: 768px) {
-    h1 {
-        font-size: 0.9em;
+@media (max-width: 600px) {
+    main {
+        padding-top: 40px;
+        margin: 5px auto;
+    }
+
+    section {
+        padding: 20px;
+        width: 92%;
+    }
+
+    h1, h2, h3 {
+        font-size: 20px;
+    }
+
+    p, li {
+        font-size: 16px;
+        text-align: left;
     }
 
     img {
         width: 100%;
     }
-
-    p.destaqueVermelho {
-        color: white; 
-        max-width: 400px; 
-        min-width: 200px; 
-    }
-
-    main {
-        padding-top: 30px;
-    }
-
-    section {
-        width: 100%;
-        margin: 10px;
-        padding: 10px;
-        background: white;
-        border-radius: 10px;
-        box-shadow: 0 2px 2px rgba(0,0,0,0.05);
-}
-
 }
