--- a/headermenufooter.css
+++ b/headermenufooter.css
@@ -76,3 +76,31 @@ footer > p {
     text-align: center;
 }
 
+@media (max-width: 600px) {
+    header {
+        font-size: 18px;
+        padding: 15px 10px;
+    }
+
+    .menu-hamburguer {
+        top: 10px;
+        left: 10px;
+        padding: 8px;
+    }
+
+    .menu-hamburguer div {
+        width: 25px;
+        height: 4px;
+        margin: 4px 0;
+    }
+
+    .menu {
+        width: 220px;
+        padding-top: 50px;
+    }
+
+    .menu ul li a {
+        padding: 8px;
+        font-size: 14px;
+    }
+}
