--- a/estiloMaterias.css
+++ b/estiloMaterias.css
@@ -220,6 +220,14 @@ td.trestab {
     padding: 5px 0px 5px 90px;
 }
 
+td.quatrotab {
+    padding: 5px 0px 5px 120px;
+}
+
+td.cincotab {
+    padding: 5px 0px 5px 150px;
+}
+
 span.azulcodigo {
     color: rgb(124, 186, 236);
 }
@@ -242,6 +250,10 @@ span.rosacodigo {
 
 span.roxocodigo {
     color: rgb(160, 87, 182);
+}
+
+span.laranjacodigo {
+    color: rgba(255, 160, 122, 0.801);
 }
 
 span.comentariocodigo {
